--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "lodash": "^4.17.5",
+    "lodash.filter": "^4.6.0",
+    "lodash.find": "^4.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
